force-app/main/default/objects/OffersFilter__c/OffersFilter__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Filtro de Ofertas</label>
</CustomObject>