force-app/main/default/objects/OffersFilter__c/fields/BandwidthPlanFTTC__c.field-meta.xml
<CustomField>
    <fullName>BandwidthPlanFTTC__c</fullName>
    <label>Plano de Banda Larga FTTC</label>
    <length>150</length>
    <type>Text</type>
</CustomField>