force-app/main/default/objects/OffersFilter__c/fields/BandwidthPlanFTTH__c.field-meta.xml
<CustomField>
    <fullName>BandwidthPlanFTTH__c</fullName>
    <label>Plano de Banda Larga FTTH</label>
    <length>150</length>
    <type>Text</type>
</CustomField>