force-app/main/default/objects/OffersFilter__c/fields/BandwidthPlanXDSL__c.field-meta.xml
<CustomField>
    <fullName>BandwidthPlanXDSL__c</fullName>
    <label>Plano de Banda Larga XDSL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>