force-app/main/default/objects/OffersFilter__c/fields/OfferGroup__c.field-meta.xml
<CustomField>
    <fullName>OfferGroup__c</fullName>
    <label>Grupo de Ofertas</label>
    <length>150</length>
    <type>Text</type>
</CustomField>