force-app/main/default/objects/OffersFilter__c/fields/TvPlan__c.field-meta.xml
<CustomField>
    <fullName>TvPlan__c</fullName>
    <label>Plano de TV</label>
    <length>150</length>
    <type>Text</type>
</CustomField>