force-app/main/default/objects/OffersFilter__c/fields/TvPlanWithoutFTTH__c.field-meta.xml
<CustomField>
    <fullName>TvPlanWithoutFTTH__c</fullName>
    <label>Plano de TV sem FTTH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>